<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="initial_result">0</string>

    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>

    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">x</string>
    <string name="button_divide">÷</string>
    <string name="button_equals">=</string>
    <string name="button_delete">⌫</string>
    <string name="app_name">My Application</string>

    <string name="hub_title">Activity Hub</string>
    <string name="go_to_calculator">Go to Calculator</string>
    <string name="go_to_media_player">Go to Media Player</string>
    <string name="go_to_location_activity">Go to Location Activity</string>
    <string name="go_to_telephony_activity">Go to Telephony Activity</string>

    <string name="choose_song">Выберите песню</string>
    <string name="go_to_sockets_activity">Go to Sockets Activity</string>
</resources>